<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4019.2">
  <DUT Name="ST_KL3403_Report" Id="{5dd0efcf-78e1-47bb-9eb6-652d69df35b2}">
    <Declaration><![CDATA[TYPE ST_KL3403_Report :
STRUCT
	Summary: WORD;
	SummaryPrice:WORD;
	Tarrif1: WORD;
	Tarrif1Price:WORD;
	Tarrif2: WORD;
	Tarrif2Price:WORD;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>